## Makefile.am in applications/elliptic/amg

bin_PROGRAMS += applications/elliptic/amg/amg

applications_elliptic_amg_amg_SOURCES = \
	applications/elliptic/amg/amg_user.cpp \
	applications/elliptic/amg/amg_user.h \
	applications/elliptic/amg/amg.cpp \
	applications/elliptic/amg/fclaw2d_map_nomap.c

applications_elliptic_amg_amg_CPPFLAGS = $(AM_CPPFLAGS) 

## @top_builddir@/src/solvers/fclaw2d_clawpack46/libclawpack5.la
